--- a/main.html
+++ b/main.html
@@ -82,44 +82,20 @@ body{
   }
 }
 
-/* Loading Screen - Ultra Premium */
+/* Loading Screen - Ultra Refined */
 .loader{
   position:fixed;
   top:0;
   left:0;
   width:100%;
   height:100%;
-  background:linear-gradient(135deg, #faf8f5 0%, #ffffff 50%, #faf8f5 100%);
+  background:var(--white);
   z-index:10000;
   display:flex;
   align-items:center;
   justify-content:center;
-  transition:opacity 1s cubic-bezier(0.4, 0, 0.2, 1), visibility 1s ease;
+  transition:opacity 0.6s cubic-bezier(0.4, 0, 0.2, 1), visibility 0.6s ease;
   overflow:hidden;
-}
-
-.loader::before{
-  content:'';
-  position:absolute;
-  top:-50%;
-  left:-50%;
-  width:200%;
-  height:200%;
-  background:radial-gradient(circle, rgba(196,22,28,0.03) 0%, transparent 70%);
-  animation:rotate 20s linear infinite;
-}
-
-.loader::after{
-  content:'';
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%, -50%);
-  width:400px;
-  height:400px;
-  border-radius:50%;
-  background:radial-gradient(circle, rgba(196,22,28,0.05) 0%, transparent 70%);
-  animation:pulse 3s ease-in-out infinite;
 }
 
 .loader.hidden{
@@ -132,186 +108,133 @@ body{
   text-align:center;
   position:relative;
   z-index:2;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:48px;
 }
 
 .loader-logo{
   opacity:0;
-  transform:scale(0.7) translateY(30px) rotate(-5deg);
-  animation:logoEntrance 1.2s cubic-bezier(0.34, 1.56, 0.64, 1) 0.4s forwards;
+  transform:translateY(20px);
+  animation:logoReveal 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.2s forwards;
   display:inline-block;
   position:relative;
-  filter:drop-shadow(0 20px 60px rgba(196,22,28,0.15));
-}
-
-.loader-logo::before{
-  content:'';
-  position:absolute;
-  top:-20px;
-  left:-20px;
-  right:-20px;
-  bottom:-20px;
-  border:2px solid rgba(196,22,28,0.1);
-  border-radius:50%;
-  animation:ringPulse 2s ease-in-out infinite;
-}
-
-.loader-logo::after{
-  content:'';
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%, -50%) scale(0);
-  width:120%;
-  height:120%;
-  background:radial-gradient(circle, rgba(196,22,28,0.2) 0%, transparent 70%);
-  border-radius:50%;
-  animation:logoGlow 2s ease-in-out infinite;
-  z-index:-1;
 }
 
 .loader-logo img{
-  width:clamp(150px, 25vw, 280px);
+  width:clamp(140px, 22vw, 220px);
   height:auto;
   object-fit:contain;
-  filter:drop-shadow(0 15px 40px rgba(196,22,28,0.25));
+  filter:drop-shadow(0 4px 16px rgba(196,22,28,0.08));
   position:relative;
   z-index:1;
-  animation:logoFloat 3s ease-in-out infinite;
+}
+
+.loader-line{
+  width:1px;
+  height:60px;
+  background:linear-gradient(180deg, transparent 0%, var(--primary) 50%, transparent 100%);
+  opacity:0;
+  animation:lineReveal 1.2s ease 0.5s forwards;
+  position:relative;
+}
+
+.loader-line::after{
+  content:'';
+  position:absolute;
+  top:0;
+  left:50%;
+  transform:translateX(-50%);
+  width:1px;
+  height:0;
+  background:var(--primary);
+  animation:lineDraw 1.2s ease 0.5s forwards;
 }
 
 .loader-text{
-  font-family:'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-  font-size:clamp(16px, 2vw, 22px);
+  font-family:'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  font-size:11px;
   color:var(--gray);
-  margin-top:40px;
-  letter-spacing:0.25em;
+  letter-spacing:0.3em;
   text-transform:uppercase;
-  font-weight:500;
+  font-weight:400;
   opacity:0;
-  animation:fadeInUp 1s ease 0.8s forwards;
+  animation:textReveal 0.8s ease 0.8s forwards;
   text-rendering:optimizeLegibility;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
   line-height:1.5;
-  position:relative;
-}
-
-.loader-text::after{
-  content:'';
-  position:absolute;
-  bottom:-12px;
-  left:50%;
-  transform:translateX(-50%) scaleX(0);
-  width:60px;
-  height:2px;
-  background:linear-gradient(90deg, transparent, var(--primary), transparent);
-  animation:textLine 1.2s ease 1.2s forwards;
 }
 
 .loader-progress{
   position:absolute;
   bottom:0;
   left:0;
-  height:3px;
-  background:linear-gradient(90deg, var(--primary), var(--primary-light));
+  height:1px;
+  background:var(--primary);
   width:0%;
-  animation:progressLoad 1.5s ease forwards;
-  box-shadow:0 0 10px rgba(196,22,28,0.5);
+  animation:progressLoad 1.8s cubic-bezier(0.4, 0, 0.2, 1) forwards;
 }
 
-@keyframes rotate{
-  from{
-    transform:rotate(0deg);
-  }
-  to{
-    transform:rotate(360deg);
-  }
-}
-
-@keyframes pulse{
-  0%, 100%{
-    transform:translate(-50%, -50%) scale(1);
-    opacity:0.3;
-  }
-  50%{
-    transform:translate(-50%, -50%) scale(1.2);
-    opacity:0.1;
-  }
-}
-
-@keyframes logoEntrance{
+@keyframes logoReveal{
   0%{
     opacity:0;
-    transform:scale(0.7) translateY(30px) rotate(-5deg);
-  }
-  60%{
-    transform:scale(1.05) translateY(-5px) rotate(2deg);
+    transform:translateY(20px) scale(0.95);
   }
   100%{
     opacity:1;
-    transform:scale(1) translateY(0) rotate(0deg);
+    transform:translateY(0) scale(1);
   }
 }
 
-@keyframes logoFloat{
-  0%, 100%{
-    transform:translateY(0);
+@keyframes lineReveal{
+  0%{
+    opacity:0;
+    transform:scaleY(0);
+  }
+  100%{
+    opacity:1;
+    transform:scaleY(1);
+  }
+}
+
+@keyframes lineDraw{
+  0%{
+    height:0;
+    opacity:0;
   }
   50%{
-    transform:translateY(-8px);
+    opacity:1;
   }
-}
-
-@keyframes ringPulse{
-  0%, 100%{
-    transform:scale(0.95);
+  100%{
+    height:60px;
     opacity:0.3;
   }
-  50%{
-    transform:scale(1.1);
-    opacity:0.1;
-  }
 }
 
-@keyframes logoGlow{
-  0%, 100%{
-    transform:translate(-50%, -50%) scale(0.8);
-    opacity:0.4;
-  }
-  50%{
-    transform:translate(-50%, -50%) scale(1);
-    opacity:0.2;
-  }
-}
-
-@keyframes fadeInUp{
-  from{
+@keyframes textReveal{
+  0%{
     opacity:0;
-    transform:translateY(20px);
+    transform:translateY(8px);
   }
-  to{
+  100%{
     opacity:1;
     transform:translateY(0);
-  }
-}
-
-@keyframes textLine{
-  from{
-    transform:translateX(-50%) scaleX(0);
-    opacity:0;
-  }
-  to{
-    transform:translateX(-50%) scaleX(1);
-    opacity:1;
   }
 }
 
 @keyframes progressLoad{
-  from{
+  0%{
     width:0%;
+    opacity:0;
   }
-  to{
+  10%{
+    opacity:1;
+  }
+  100%{
     width:100%;
+    opacity:1;
   }
 }
 
@@ -482,6 +405,17 @@ body{
 
 @keyframes fadeIn{
   to{opacity:1;}
+}
+
+@keyframes fadeInUp{
+  from{
+    opacity:0;
+    transform:translateY(20px);
+  }
+  to{
+    opacity:1;
+    transform:translateY(0);
+  }
 }
 
 /* Logo Shine Effect - removed */
@@ -1361,6 +1295,8 @@ body{
     <div class="loader-logo">
       <img src="/img/99logo.png" alt="99 Cafe">
     </div>
+    <div class="loader-line"></div>
+    <div class="loader-text">Loading</div>
   </div>
   <div class="loader-progress"></div>
 </div>
