--- a/index.html
+++ b/index.html
@@ -343,7 +343,10 @@ body{
   display:flex;
   align-items:center;
   justify-content:center;
-  padding:60px var(--spacing-lg);
+  padding-top:120px;
+  padding-bottom:60px;
+  padding-left:var(--spacing-lg);
+  padding-right:var(--spacing-lg);
   overflow:hidden;
   background:linear-gradient(180deg, var(--white) 0%, var(--cream) 100%);
 }
@@ -1108,7 +1111,10 @@ body{
   }
   
   .hero{
-    padding:40px var(--spacing-lg);
+    padding-top:100px;
+    padding-bottom:40px;
+    padding-left:var(--spacing-lg);
+    padding-right:var(--spacing-lg);
     min-height:50vh;
   }
   
@@ -1205,7 +1211,10 @@ body{
 
 @media (max-width: 768px){
   .hero{
-    padding:var(--spacing-lg) var(--spacing-md);
+    padding-top:100px;
+    padding-bottom:var(--spacing-lg);
+    padding-left:var(--spacing-md);
+    padding-right:var(--spacing-md);
     min-height:90vh;
   }
   
