--- a/main.html
+++ b/main.html
@@ -343,7 +343,10 @@ body{
   display:flex;
   align-items:center;
   justify-content:center;
-  padding:60px var(--spacing-lg);
+  padding-top:120px;
+  padding-bottom:60px;
+  padding-left:var(--spacing-lg);
+  padding-right:var(--spacing-lg);
   overflow:hidden;
   background:linear-gradient(180deg, var(--white) 0%, var(--cream) 100%);
 }
@@ -1108,7 +1111,10 @@ body{
   }
   
   .hero{
-    padding:40px var(--spacing-lg);
+    padding-top:100px;
+    padding-bottom:40px;
+    padding-left:var(--spacing-lg);
+    padding-right:var(--spacing-lg);
     min-height:50vh;
   }
   
@@ -1205,7 +1211,10 @@ body{
 
 @media (max-width: 768px){
   .hero{
-    padding:var(--spacing-lg) var(--spacing-md);
+    padding-top:100px;
+    padding-bottom:var(--spacing-lg);
+    padding-left:var(--spacing-md);
+    padding-right:var(--spacing-md);
     min-height:90vh;
   }
   
@@ -1306,7 +1315,7 @@ body{
   <!-- Navigation -->
   <nav class="nav">
     <a href="#" class="nav-logo">
-      <img src="/img/99logo.png" alt="99">
+      <img src="img/99logo.png" alt="99">
     </a>
     <ul class="nav-menu">
       <li><a href="#philosophy">Philosophy</a></li>
@@ -1400,7 +1409,7 @@ body{
     <div class="footer-content">
       <div class="footer-brand">
         <div class="footer-logo">
-          <img src="/img/99logo.png" alt="99">
+          <img src="img/99logo.png" alt="99">
         </div>
         <p class="footer-tagline">It's More Than A Number</p>
       </div>
