--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ body{
   display:flex;
   align-items:center;
   justify-content:center;
-  padding-top:120px;
+  padding-top:160px;
   padding-bottom:60px;
   padding-left:var(--spacing-lg);
   padding-right:var(--spacing-lg);
@@ -1111,7 +1111,7 @@ body{
   }
   
   .hero{
-    padding-top:100px;
+    padding-top:140px;
     padding-bottom:40px;
     padding-left:var(--spacing-lg);
     padding-right:var(--spacing-lg);
@@ -1211,7 +1211,7 @@ body{
 
 @media (max-width: 768px){
   .hero{
-    padding-top:100px;
+    padding-top:140px;
     padding-bottom:var(--spacing-lg);
     padding-left:var(--spacing-md);
     padding-right:var(--spacing-md);
@@ -1315,7 +1315,7 @@ body{
   <!-- Navigation -->
   <nav class="nav">
     <a href="#" class="nav-logo">
-      <img src="/img/99logo.png" alt="99">
+      <img src="img/99logo.png" alt="99">
     </a>
     <ul class="nav-menu">
       <li><a href="#philosophy">Philosophy</a></li>
@@ -1409,7 +1409,7 @@ body{
     <div class="footer-content">
       <div class="footer-brand">
         <div class="footer-logo">
-          <img src="/img/99logo.png" alt="99">
+          <img src="img/99logo.png" alt="99">
         </div>
         <p class="footer-tagline">It's More Than A Number</p>
       </div>
