--- a/main.html
+++ b/main.html
@@ -343,7 +343,7 @@ body{
   display:flex;
   align-items:center;
   justify-content:center;
-  padding-top:120px;
+  padding-top:160px;
   padding-bottom:60px;
   padding-left:var(--spacing-lg);
   padding-right:var(--spacing-lg);
@@ -1111,7 +1111,7 @@ body{
   }
   
   .hero{
-    padding-top:100px;
+    padding-top:140px;
     padding-bottom:40px;
     padding-left:var(--spacing-lg);
     padding-right:var(--spacing-lg);
@@ -1211,7 +1211,7 @@ body{
 
 @media (max-width: 768px){
   .hero{
-    padding-top:100px;
+    padding-top:140px;
     padding-bottom:var(--spacing-lg);
     padding-left:var(--spacing-md);
     padding-right:var(--spacing-md);
@@ -1302,7 +1302,7 @@ body{
 <div class="loader" id="loader">
   <div class="loader-content">
     <div class="loader-logo">
-      <img src="/img/99logo.png" alt="99 Cafe">
+      <img src="img/99logo.png" alt="99 Cafe">
     </div>
     <div class="loader-line"></div>
     <div class="loader-text">Loading</div>
@@ -1328,7 +1328,7 @@ body{
     <canvas class="hero-canvas" id="heroCanvas"></canvas>
     <div class="hero-content">
       <div class="hero-logo">
-        <img src="/img/99logo.png" alt="99 Cafe">
+        <img src="img/99logo.png" alt="99 Cafe">
       </div>
       <div class="hero-subtitle">It's More Than A Number</div>
       <p class="hero-description">
