--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@ body{
 .branch{
   position:relative;
   background:var(--white);
-  padding:var(--spacing-xl);
+  padding:var(--spacing-lg);
   text-decoration:none;
   color:var(--black);
   transition:all 0.7s cubic-bezier(0.4, 0, 0.2, 1);
@@ -1060,8 +1060,8 @@ body{
   -webkit-tap-highlight-color:transparent;
   box-shadow:var(--shadow-sm);
   isolation:isolate;
-  aspect-ratio:50/70;
-  min-height:490px;
+  aspect-ratio:auto;
+  min-height:auto;
   width:100%;
   height:auto;
 }
@@ -1082,7 +1082,22 @@ body{
 
 @media (min-width: 1400px){
   .branch{
-    padding:var(--spacing-lg);
+    padding:var(--spacing-md);
+  }
+  
+  .branch-number{
+    font-size:40px;
+  }
+  
+  .branch-title{
+    font-size:clamp(20px, 2.5vw, 28px);
+    margin-bottom:10px;
+  }
+  
+  .branch-description{
+    font-size:clamp(14px, 1.3vw, 16px);
+    line-height:1.5;
+    margin-bottom:12px;
   }
 }
 
@@ -1120,18 +1135,18 @@ body{
   display:flex;
   justify-content:space-between;
   align-items:flex-start;
-  margin-bottom:var(--spacing-md);
+  margin-bottom:var(--spacing-sm);
 }
 
 @media (min-width: 1400px){
   .branch-header{
-    margin-bottom:var(--spacing-sm);
+    margin-bottom:12px;
   }
 }
 
 .branch-number{
   font-family:'Playfair Display', 'Georgia', 'Times New Roman', serif;
-  font-size:72px;
+  font-size:48px;
   font-weight:900;
   background:linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
   -webkit-background-clip:text;
@@ -1193,10 +1208,10 @@ body{
 
 .branch-title{
   font-family:'Playfair Display', 'Georgia', 'Times New Roman', serif;
-  font-size:clamp(32px, 4.5vw, 48px);
+  font-size:clamp(24px, 3.5vw, 36px);
   font-weight:700;
   color:var(--black);
-  margin-bottom:var(--spacing-sm);
+  margin-bottom:12px;
   letter-spacing:-0.03em;
   line-height:1.2;
   text-rendering:optimizeLegibility;
@@ -1214,12 +1229,12 @@ body{
 
 .branch-description{
   font-family:'Cormorant Garamond', 'Georgia', 'Times New Roman', serif;
-  font-size:18px;
+  font-size:16px;
   color:var(--gray);
-  line-height:1.75;
+  line-height:1.6;
   font-weight:400;
   font-style:italic;
-  margin-bottom:var(--spacing-md);
+  margin-bottom:var(--spacing-sm);
   text-rendering:optimizeLegibility;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
@@ -1244,14 +1259,14 @@ body{
   align-items:center;
   gap:10px;
   transition:all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-  margin-top:var(--spacing-sm);
+  margin-top:8px;
   text-rendering:optimizeLegibility;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
   line-height:1.5;
   position:relative;
   z-index:1;
-  padding:8px 0;
+  padding:4px 0;
 }
 
 .branch-link::after{
@@ -1303,6 +1318,185 @@ body{
 .branch-primary:hover{
   box-shadow:var(--shadow-xl), 0 0 0 2px var(--primary), inset 0 0 60px rgba(196,22,28,0.05);
   background:linear-gradient(135deg, var(--white) 0%, rgba(196,22,28,0.06) 50%, rgba(196,22,28,0.03) 100%);
+}
+
+/* Careers Section - Elegant & Simple */
+.careers-section{
+  position:relative;
+  padding:var(--spacing-xl) var(--spacing-lg);
+  background:linear-gradient(180deg, var(--cream) 0%, var(--white) 100%);
+  isolation:isolate;
+  overflow:hidden;
+}
+
+.careers-section::before{
+  content:'';
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:radial-gradient(ellipse at center, var(--primary-glow) 0%, transparent 60%);
+  opacity:0.3;
+  z-index:0;
+  pointer-events:none;
+}
+
+.careers-container{
+  max-width:900px;
+  margin:0 auto;
+  position:relative;
+  z-index:1;
+}
+
+.careers-content{
+  text-align:center;
+  padding:var(--spacing-lg) 0;
+}
+
+.careers-label{
+  font-family:'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  font-size:11px;
+  color:var(--gray);
+  letter-spacing:0.22em;
+  text-transform:uppercase;
+  font-weight:500;
+  margin-bottom:16px;
+  display:inline-block;
+  padding-bottom:8px;
+  position:relative;
+}
+
+.careers-label::after{
+  content:'';
+  position:absolute;
+  bottom:0;
+  left:50%;
+  transform:translateX(-50%);
+  width:40px;
+  height:2px;
+  background:linear-gradient(90deg, transparent 0%, var(--primary) 50%, transparent 100%);
+}
+
+.careers-title{
+  font-family:'Cinzel', 'Georgia', serif;
+  font-size:clamp(36px, 5vw, 56px);
+  font-weight:700;
+  background:linear-gradient(135deg, var(--black) 0%, var(--gray) 50%, var(--black) 100%);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  background-clip:text;
+  letter-spacing:-0.04em;
+  line-height:1.1;
+  margin-bottom:24px;
+}
+
+.careers-description{
+  font-family:'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  font-size:clamp(16px, 2vw, 20px);
+  color:var(--gray);
+  line-height:1.75;
+  max-width:700px;
+  margin:0 auto 40px;
+  font-weight:400;
+}
+
+.careers-cta{
+  display:inline-flex;
+  align-items:center;
+  gap:14px;
+  padding:20px 56px;
+  background:var(--black);
+  color:var(--white);
+  text-decoration:none;
+  font-family:'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  font-size:13px;
+  letter-spacing:0.15em;
+  text-transform:uppercase;
+  font-weight:600;
+  transition:all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  position:relative;
+  overflow:hidden;
+  border:2px solid var(--black);
+  border-radius:var(--radius-md);
+  box-shadow:var(--shadow-md);
+}
+
+.careers-cta::before{
+  content:'';
+  position:absolute;
+  top:0;
+  left:-100%;
+  width:100%;
+  height:100%;
+  background:linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
+  transition:left 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  z-index:-1;
+}
+
+.careers-cta:hover::before{
+  left:0;
+}
+
+.careers-cta:hover{
+  color:var(--white);
+  transform:translateY(-4px);
+  box-shadow:var(--shadow-xl), var(--shadow-glow);
+  border-color:var(--primary);
+}
+
+.careers-cta svg{
+  width:12px;
+  height:12px;
+  transition:transform 0.4s ease;
+}
+
+.careers-cta:hover svg{
+  transform:translateX(4px);
+}
+
+@media (min-width: 1400px){
+  .careers-section{
+    padding:var(--spacing-lg) var(--spacing-lg);
+  }
+  
+  .careers-content{
+    padding:var(--spacing-md) 0;
+  }
+  
+  .careers-title{
+    font-size:clamp(32px, 3.5vw, 48px);
+    margin-bottom:16px;
+  }
+  
+  .careers-description{
+    font-size:clamp(16px, 1.5vw, 18px);
+    margin-bottom:32px;
+  }
+  
+  .careers-cta{
+    padding:16px 48px;
+    font-size:12px;
+  }
+}
+
+@media (max-width: 768px){
+  .careers-section{
+    padding:var(--spacing-lg) var(--spacing-md);
+  }
+  
+  .careers-content{
+    padding:var(--spacing-md) 0;
+  }
+  
+  .careers-description{
+    margin-bottom:32px;
+  }
+  
+  .careers-cta{
+    padding:16px 40px;
+    font-size:11px;
+  }
 }
 
 /* Footer - Minimalist Luxury */
@@ -1383,14 +1577,13 @@ body{
 .footer-logo img{
   width:68px;
   height:68px;
-  filter:brightness(0) invert(1);
+  filter:brightness(0) invert(1) drop-shadow(0 4px 8px rgba(255,255,255,0.1));
   transition:all 0.4s ease;
-  filter:drop-shadow(0 4px 8px rgba(255,255,255,0.1));
 }
 
 .footer-logo:hover img{
   transform:scale(1.05) rotate(2deg);
-  filter:drop-shadow(0 6px 12px rgba(255,255,255,0.2));
+  filter:brightness(0) invert(1) drop-shadow(0 6px 12px rgba(255,255,255,0.2));
 }
 
 .footer-tagline{
@@ -1636,12 +1829,12 @@ body{
   }
   
   .branch-title{
-    font-size:clamp(24px, 2.5vw, 32px);
+    font-size:clamp(20px, 2.5vw, 28px);
   }
   
   .branch-description{
-    font-size:clamp(16px, 1.4vw, 18px);
-    line-height:1.6;
+    font-size:clamp(14px, 1.3vw, 16px);
+    line-height:1.5;
   }
   
   .branches{
@@ -1663,17 +1856,17 @@ body{
   }
   
   .branch{
-    padding:var(--spacing-lg);
-    aspect-ratio:50/70;
-    min-height:420px;
+    padding:var(--spacing-md);
+    aspect-ratio:auto;
+    min-height:auto;
   }
   
   .branch-header{
-    margin-bottom:var(--spacing-sm);
+    margin-bottom:12px;
   }
   
   .branch-number{
-    font-size:48px;
+    font-size:40px;
   }
   
   .footer{
@@ -1741,13 +1934,13 @@ body{
   }
   
   .branch{
-    padding:var(--spacing-lg);
-    aspect-ratio:50/70;
-    min-height:350px;
+    padding:var(--spacing-md);
+    aspect-ratio:auto;
+    min-height:auto;
   }
   
   .branch-number{
-    font-size:48px;
+    font-size:36px;
   }
   
   .footer{
@@ -1771,13 +1964,13 @@ body{
   }
   
   .branch{
-    padding:var(--spacing-md);
-    aspect-ratio:50/70;
-    min-height:280px;
+    padding:var(--spacing-sm);
+    aspect-ratio:auto;
+    min-height:auto;
   }
   
   .branch-number{
-    font-size:40px;
+    font-size:32px;
   }
 }
 
@@ -1827,6 +2020,7 @@ body{
     <ul class="nav-menu">
       <li><a href="#philosophy">Philosophy</a></li>
       <li><a href="#branches">Branches</a></li>
+      <li><a href="careers.html">Careers</a></li>
     </ul>
   </nav>
 
@@ -1911,6 +2105,25 @@ body{
     </div>
   </section>
 
+  <!-- Careers Section -->
+  <section class="careers-section">
+    <div class="careers-container">
+      <div class="careers-content">
+        <div class="careers-label">Join Our Team</div>
+        <h2 class="careers-title">Careers at 99 Cafe</h2>
+        <p class="careers-description">
+          We're looking for passionate individuals who share our commitment to excellence and refined service. Explore opportunities and become part of the 99 Cafe family.
+        </p>
+        <a href="careers.html" class="careers-cta">
+          View Open Positions
+          <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 6H11M11 6L6 1M11 6L6 11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </a>
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
@@ -1925,18 +2138,19 @@ body{
         <h4>Navigation</h4>
         <a href="#philosophy">Philosophy</a>
         <a href="#branches">Branches</a>
+        <a href="careers.html">Careers</a>
       </div>
       
       <div class="footer-section">
         <h4>Connect</h4>
-        <a href="#">Instagram</a>
+        <a href="https://www.instagram.com/99cafe.official/" target="_blank" rel="noopener noreferrer">Instagram</a>
       </div>
     </div>
     
     <div class="footer-bottom">
       <div class="footer-copyright">© 2025 99 Cafe. All rights reserved.</div>
       <div class="footer-social">
-        <a href="#" aria-label="Instagram">
+        <a href="https://www.instagram.com/99cafe.official/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect x="2" y="2" width="20" height="20" rx="5" ry="5" stroke="currentColor" stroke-width="1.5" fill="none"/>
             <circle cx="12" cy="12" r="4" stroke="currentColor" stroke-width="1.5" fill="none"/>
