added careers page to index.html

--- a/index.html
+++ b/index.html
@@ -2112,7 +2112,7 @@ body{
       </div>
       
       <div class="branches-grid">
-        <a href="https://us.99cafe.com" class="branch branch-primary">
+        <a href="us/index.html" class="branch branch-primary">
           <div class="branch-header">
             <div class="branch-number">01</div>
             <div class="branch-badge">Primary</div>
@@ -2129,7 +2129,7 @@ body{
           </div>
         </a>
 
-        <a href="https://ps.99cafe.com" class="branch">
+        <a href="ps/index.html" class="branch">
           <div class="branch-header">
             <div class="branch-number">02</div>
           </div>
